--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -3,6 +3,10 @@ languageCode = "en-us"
 theme = "terminal"
 pagination.pagerSize = 5
 
+[caches]
+  [caches.images]
+    dir = ':cacheDir/images'
+
 [markup.highlight]
   noClasses = false
 
