add slides (assets/docs/propositions.pdf)

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -7,8 +7,13 @@ pagination.pagerSize = 5
   [caches.images]
     dir = ':cacheDir/images'
 
-[markup.highlight]
-  noClasses = false
+[markup]
+  [highlight]
+    noClasses = false
+  [goldmark.renderHooks.image]
+    enableDefault = true
+  [goldmark.renderHooks.link]
+    enableDefault = true
 
 [params]
   contentTypeName = "posts"
